[gd_scene load_steps=7 format=3 uid="uid://buc431w2jtg7q"]

[ext_resource type="Texture2D" uid="uid://cx3ccv7w65vja" path="res://Asset/Object/exterior (3).png" id="1_28iq6"]
[ext_resource type="Script" path="res://naration_1.gd" id="1_x0cpq"]
[ext_resource type="FontFile" uid="uid://b20f8chq4udvt" path="res://Asset/Font/animeace2bb_ot/animeace2_bld.otf" id="2_xjhdc"]
[ext_resource type="FontFile" uid="uid://dfyg6bq4nwdkf" path="res://Asset/HelpMe.otf" id="3_6wfeo"]
[ext_resource type="AudioStream" uid="uid://blbjggsxmjlrh" path="res://Asset/Horror SFX Free/Monsters & Ghosts/Laugh_spooky_4.wav" id="5_beep4"]
[ext_resource type="AudioStream" uid="uid://c26ypsex11567" path="res://Asset/scary-spooky-creepy-horror-ambient-dark-piano-cinematic-115052.mp3" id="5_gomyt"]

[node name="naration1" type="Node2D"]
script = ExtResource("1_x0cpq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577.5, 325.5)
scale = Vector2(0.651228, 0.629883)
texture = ExtResource("1_28iq6")

[node name="Label" type="Label" parent="."]
offset_left = 75.0
offset_top = 139.0
offset_right = 1081.0
offset_bottom = 525.0
rotation = -0.000781848
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xjhdc")
theme_override_font_sizes/font_size = 30
text = "Akhirnya mereka berdua pun berangkat menuju kampus mereka pada malam harinya"
vertical_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
offset_left = 496.0
offset_top = 490.0
offset_right = 576.0
offset_bottom = 534.0
theme_override_fonts/font = ExtResource("3_6wfeo")
theme_override_font_sizes/font_size = 50
text = "play"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gomyt")
autoplay = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_beep4")
autoplay = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="tree_entered" from="AudioStreamPlayer2D2" to="." method="_on_audio_stream_player_2d_2_tree_entered"]
[connection signal="tree_exiting" from="AudioStreamPlayer2D2" to="." method="_on_audio_stream_player_2d_2_tree_exiting"]
